backend/k8s/backend-ingress.yaml
apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:

  name: backend-ingress

  namespace: vendor-invoice

  annotations:

    nginx.ingress.kubernetes.io/rewrite-target: /

spec:

  ingressClassName: nginx

  rules:

  - host: invoice.local

    http:

      paths:

      - path: /

        pathType: Prefix

        backend:

          service:

            name: backend-service

            port:

              number: 8000
